# streamlit_demo

./: app.py  pyproject.toml
apps/: demo_query_param.py  demo_session_state.py
