[tool.poetry]
name = "streamlit_demo"
version = "0.1.0"
description = "\"Demo bugs\""
authors = ["Dharmesh Pandav <pandav.dharmesh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit-aggrid = "^0.1.9"
streamlit = "^0.84.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
